<resources>
    <string name="app_name">Calculator</string>
    <string name="txt_digit">12345</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_0">0</string>

    <string name="txt_divide">/</string>
    <string name="txt_multiply">*</string>
    <string name="txt_minus">-</string>
    <string name="txt_clear">CLR</string>
    <string name="txt_plus">+</string>
    <string name="txt_equal">=</string>
    <string name="txt_dot">.</string>
</resources>